updated input type definition
