# docs/openapi/api-internal-v1.yaml
@@ -20,6 +20,8 @@ tags:
     description: Operations about logs and extractions
   - name: healthCheck
     description: Operations about application status
+  - name: downtime
+    description: Operations about PN functionalities monitoring
 
 paths:
   '/persons/v1/person-id':
@@ -27,7 +29,8 @@ paths:
       tags:
         - persons
       operationId: getPersonalPersonId
-      description: Get the unique identifier of a person
+      description: >-
+        Get the unique identifier of a person
       requestBody:
         required: true
         content:
@@ -58,7 +61,8 @@ paths:
       tags:
         - persons
       operationId: getPersonalTaxId
-      description: Get the tax id of a person
+      description: >-
+        Get the tax id of a person
       requestBody:
         required: true
         content:
@@ -89,7 +93,8 @@ paths:
       tags:
         - logs
       operationId: getNotificationInfoLogs
-      description: Download the logs archive containing the full info of a notification
+      description: >-
+        Download the logs archive containing the full info of a notification
       requestBody:
         required: true
         content:
@@ -102,7 +107,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BaseResponseDTO'
+                $ref: '#/components/schemas/BaseResponseDto'
         '400':
           description: Errors during the request validation
           content:
@@ -120,7 +125,9 @@ paths:
       tags:
         - logs
       operationId: getNotificationsInMonth
-      description: Download the logs archive containing the notifications sent in a specific month
+      description: >- 
+        Download the logs archive containing the notifications sent 
+        in a specific month
       requestBody:
         required: true
         content:
@@ -133,7 +140,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BaseResponseDTO'
+                $ref: '#/components/schemas/BaseResponseDto'
         '400':
           description: Errors during the request validation
           content:
@@ -151,7 +158,8 @@ paths:
       tags:
         - logs
       operationId: getPersonActivityLogs
-      description: Download the logs archive related to a person's own activities or on a notification
+      description: >- 
+        Download the logs archive related to a person's own activities or a notification
       requestBody:
         required: true
         content:
@@ -164,7 +172,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BaseResponseDTO'
+                $ref: '#/components/schemas/BaseResponseDto'
         '400':
           description: Errors during the request validation
           content:
@@ -191,17 +199,66 @@ paths:
               $ref: '#/components/schemas/TraceIdLogsRequestDto'
       responses:
         '200':
-          description: The operation has been successfully completed
+          description: >-
+            The operation has been successfully completed
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BaseResponseDTO'
+                $ref: '#/components/schemas/BaseResponseDto'
         '400':
           description: Errors during the request validation
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
+        '500':
+          description: Errors during the request elaboration
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+  "/downtime/v1/status":
+    get:
+      description: >-
+        Get the PN functionalities and inefficiencies list at invocation time
+      tags:
+        - downtime
+      operationId: getCurrentStatus
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/BaseResponseDto'
+        '500':
+          description: Errors during the request elaboration
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+  "/downtime/v1/events":
+    post:
+      description: >-
+        Add a new inefficiency start or end event
+      tags:
+        - downtime
+      operationId: addDowntimeEvent
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: "#/components/schemas/PnStatusUpdateEventRequestDto"
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/BaseResponseDto'
         '500':
           description: Errors during the request elaboration
           content:
@@ -278,11 +335,13 @@ components:
         referenceMonth:
           type: string
           nullable: false
-          pattern: '([0-9]{4})-(?:[0-9]{2})-01T00:00:00.000Z'
+          format: date-time
+          #pattern: '([0-9]{4})-(?:[0-9]{2})-01T00:00:00.000Z'
         endMonth:
           type: string
           nullable: false
-          pattern: '([0-9]{4})-(?:[0-9]{2})-([0-9]{2})T00:00:00.000Z'
+          format: date-time
+          #pattern: '([0-9]{4})-(?:[0-9]{2})-([0-9]{2})T00:00:00.000Z'
     PersonLogsRequestDto:
       type: object
       required:
@@ -306,10 +365,10 @@ components:
           pattern: '([A-Za-z]{4})-([A-Za-z]{4})-([A-Za-z]{4})-([0-9]{6})-([A-Za-z]{1})-([0-9]{1})'
         dateFrom:
           type: string
-          pattern: '([0-9]{4})-(?:[0-9]{2})-([0-9]{2})'
+          format: date
         dateTo:
           type: string
-          pattern: '([0-9]{4})-(?:[0-9]{2})-([0-9]{2})'
+          format: date
         recipientType:
           $ref: '#/components/schemas/RecipientTypes'
     TraceIdLogsRequestDto:
@@ -325,11 +384,11 @@ components:
         dateFrom:
           type: string
           nullable: false
-          pattern: '([0-9]{4})-(?:[0-9]{2})-([0-9]{2})'
+          format: date
         dateTo:
           type: string
           nullable: false
-          pattern: '([0-9]{4})-(?:[0-9]{2})-([0-9]{2})'
+          format: date
     GetBasicDataResponseDto:
       type: object
       required:
@@ -340,7 +399,7 @@ components:
           type: string
         message:
           type: string
-    BaseResponseDTO:
+    BaseResponseDto:
       type: object
       required:
         - message
@@ -354,6 +413,46 @@ components:
       properties:
         message:
           type: string
+    PnStatusUpdateEventRequestDto:
+      title: Event of inefficiency start or end
+      type: object
+      required:
+        - status
+        - timestamp
+        - functionality
+      properties:
+        status:
+          $ref: '#/components/schemas/PnFunctionalityStatus'
+        timestamp:
+          title: the time when the status has changed
+          type: string
+          format: date-time
+        functionality:
+          title: functionality list whose availability status has changed
+          type: array
+          minItems: 1
+          items:
+            $ref: '#/components/schemas/PnFunctionality'
     RecipientTypes:
       type: string
       enum: [ "PF", "PG"]
+    PnFunctionalityStatus:
+      type: string
+      enum:
+        - KO 
+        - OK
+    PnFunctionality:
+      title: Funzionalità di PN
+      description: >-
+        - __NOTIFICATION_CREATE__: the possibility to create new notifications
+        - __NOTIFICATION_VISUALIZATION__: the possibility to visualize the notifications and download the legalfacts
+        - __NOTIFICATION_WORKFLOW__: the notification process advancement
+      type: string       
+      enum:
+        - NOTIFICATION_CREATE
+        - NOTIFICATION_VISUALIZATION
+        - NOTIFICATION_WORKFLOW  
+      x-enum-varnames:
+        - NOTIFICATION_CREATE
+        - NOTIFICATION_VISUALIZATION
+        - NOTIFICATION_WORKFLOW 
